fix(container remains visible) - footer will zindex behind container - container rows will not be smaller than content

--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -3,13 +3,17 @@
   flex-flow: row nowrap;
   justify-content: center;
   align-items: center;
-  width: auto;
+  width: 100%;
   height: 5rem;
   overflow: hidden;
+
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
   
   margin: 0;
   border-top: .3rem solid $color-tertiary;
-  padding: 3rem 25vw;
   background-image: linear-gradient($color-bg, $color-dark);
   border-bottom: 1px solid $color-dark;
   color: $color-light;
