--- a/src/sass/layout/_main.scss
+++ b/src/sass/layout/_main.scss
@@ -1,7 +1,7 @@
 .container{
   display: grid;
   grid-template-columns: minmax(2rem, 20vw) minmax(80vw, 1fr) minmax(2rem, 20vw);
-  grid-template-rows: 3rem 1fr 3rem;
+  grid-template-rows: minmax(max-content, 3rem) minmax(max-content, 1fr) minmax(max-content, 3rem);
 
   justify-content: center;
   align-content: center;
@@ -17,7 +17,7 @@
   box-shadow: 0 1rem 4rem $color-dark;
 
   display: grid;
-  grid-template-rows: max-content 1rem minmax(0, 1fr) max-content;
+  grid-template-rows: max-content 1rem minmax(0, 1fr) minmax(2rem, max-content);
 
   min-height: 0;
   min-width: 0;
